<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Weather</string>

    // WEATHER DISPLAY

    // Update Job
    <string name="preference_first_run_key">
        <xliff:g id="preference_key">firstRun</xliff:g>
    </string>

    // Menu
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_location">Location</string>
    <string name="menu_item_update">Update</string>

    // TabLayout Titles
    <string name="current_conditions">Current Conditions</string>
    <string name="forecast">Forecast</string>

    // Toggle
    <string name="more">More</string>
    <string name="less">Less</string>

    // Current Conditions
    <string name="updated">Last update: %s</string>
    <string name="humidity">Humidity: %s</string>
    <string name="wind_speed">Wind: %s</string>
    <string name="miles_per_hour">mph</string>
    <string name="kilometers_per_hour">kph</string>
    <string name="sunrise">Sunrise: %s</string>
    <string name="sunset">Sunset: %s</string>

    // Forecast
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="min_temp">L</string>
    <string name="max_temp">H</string>
    <string name="temp_divider">/</string>

    // Weather Display Shared
    <string name="degrees">&#xB0; %s</string>
    <string name="fahrenheit">F</string>
    <string name="celsius">C</string>

    <string name="preference_weather_data_key">
        <xliff:g id="preference_key">WeatherData</xliff:g>
    </string>


    // LOCATION

    // Headings
    <string name="search_locations">Search Locations</string>
    <string name="recent_locations">Use Recent Location</string>

    // button text
    <string name="use_current_location">Use Current Location</string>
    <string name="choose_location">Choose Location</string>
    <string name="select_location">Select</string>

    <string name="find_current_location_progress_dialog">Finding Location&#8230;</string>

    <string name="preference_latitude_key">
        <xliff:g id="preference_key">lat</xliff:g>
    </string>

    <string name="preference_longitude_key">
        <xliff:g id="preference_key">lon</xliff:g>
    </string>


    // SETTINGS

    // Update data
    <string name="update_period_title">AutoRefresh Period</string>
    <string name="update_period_summary_default">Choose how frequently to refresh the weather data</string>
    <string name="update_period_summary_specific">Refresh weather data every %s</string>
    <string name="update_period_dialog_title">Refresh every&#8230;</string>

    <string name="preference_update_period_key">
        <xliff:g id="preference_key">UPDATE_PERIOD</xliff:g>
    </string>

    <string-array name="time_unit_display">
        <item>15 minutes</item>
        <item>20 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>2 hours</item>
    </string-array>

    <string-array name="time_unit_in_milliseconds">
        <item>900000</item>
        <item>1200000</item>
        <item>1800000</item>
        <item>3600000</item>
        <item>7200000</item>
    </string-array>

    // Temperature Units: Celsius vs. Fahrenheit
    <string name="units_title">Temperature Units</string>
    <string name="units_default_summary">Use metric or imperial units</string>
    <string name="celsius_long">Celsius</string>
    <string name="fahrenheit_long">Fahrenheit</string>

    <string name="preference_units_of_measurement_key">
        <xliff:g id="preference_key">UNITS</xliff:g>
    </string>

    <string-array name="units_of_measurement">
        <item>Celsius</item>
        <item>Fahrenheit</item>
    </string-array>

    <string-array name="units_of_measurement_code">
        <item>Celsius</item>
        <item>Fahrenheit</item>
    </string-array>

    // Wind Speed Metric Units
    <string name="speed_units_title">Wind Speed Units</string>
    <string name="speed_units_default_summary">Select how to display wind speed</string>

    <string name="preference_speed_units_key">
        <xliff:g id="preference_key">SPEED_UNITS</xliff:g>
    </string>

    <string-array name="speed_units_of_measurement">
        <item>m/s</item>
        <item>kph</item>
        <item>mph</item>
    </string-array>

    <string-array name="speed_units_of_measurement_code">
        <item>m/s</item>
        <item>kph</item>
        <item>mph</item>
    </string-array>

    <string-array name="speed_units_of_measurement_summary_display">
        <item>Meters per second</item>
        <item>Kilometers per hour</item>
        <item>Miles per hour</item>
    </string-array>

</resources>
