<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference
        android:title="@string/update_period_title"
        android:summary="@string/update_period_summary_default"
        android:dialogTitle="@string/update_period_dialog_title"
        android:entries="@array/time_unit_display"
        android:entryValues="@array/time_unit_in_milliseconds"
        android:key="@string/preference_update_period_key"
        android:defaultValue="1800000"/>

    <ListPreference
        android:title="@string/units_title"
        android:entries="@array/units_of_measurement"
        android:entryValues="@array/units_of_measurement_code"
        android:key="@string/preference_units_of_measurement_key"
        android:defaultValue="0"/>

    <ListPreference
        android:title="@string/speed_units_title"
        android:summary="@string/speed_units_default_summary"
        android:entries="@array/speed_units_of_measurement"
        android:entryValues="@array/speed_units_of_measurement_code"
        android:key="@string/preference_speed_units_key"
        android:defaultValue="0"/>

</PreferenceScreen>