<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_height="match_parent"
             android:layout_width="match_parent">

    <LinearLayout android:orientation="vertical"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_gravity="center">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/frameLayout3">

            <Button
                android:id="@+id/button_use_current_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/use_current_location"
                android:padding="@dimen/button_padding"
                android:layout_margin="48dp"
                android:layout_gravity="center"/>

        </FrameLayout>

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/search_location"
            android:orientation="horizontal"
            android:layout_margin="16dp"
            android:gravity="center"
            android:layout_marginTop="24dp"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_search_black_24dp"
                android:drawablePadding="8dp"
                android:text="@string/search_locations"
                android:id="@+id/textView"
                android:layout_row="0"
                android:layout_columnSpan="2"
                android:layout_margin="8dp"
                android:layout_marginBottom="24dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>


            <AutoCompleteTextView
                android:id="@+id/choose_location_field"
                android:layout_width="196dp"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="0"/>

            <Button
                android:id="@+id/button_select_search_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:text="@string/select_location"
                android:layout_row="1"
                android:layout_column="1"/>

        </GridLayout>

        <GridLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/use_recent_location"
            android:orientation="horizontal"
            android:layout_margin="16dp"
            android:gravity="center"
            android:layout_marginTop="24dp"
            android:padding="16dp">

            <TextView
                android:id="@+id/use_recent_location_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_replay_black_24dp"
                android:drawablePadding="8dp"
                android:text="@string/recent_locations"
                android:layout_row="0"
                android:layout_columnSpan="2"
                android:layout_margin="8dp"
                android:layout_marginBottom="24dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"/>

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="204dp"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="0"/>

            <Button
                android:id="@+id/button_select_recent_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/select_location"
                android:layout_row="1"
                android:layout_column="1"/>

        </GridLayout>


    </LinearLayout>

</FrameLayout>