<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="viewModel"
                  type="com.mariebyleen.weather.location.view_model.LocationViewModel"/>
    </data>

    <android.support.constraint.ConstraintLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toTopOf="parent"
            android:id="@+id/frameLayout3">

            <Button
                android:id="@+id/button_use_current_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/use_current_location"
                android:padding="@dimen/button_padding"
                android:layout_margin="48dp"
                android:layout_gravity="center"/>

        </FrameLayout>


        <AutoCompleteTextView
            android:id="@+id/choose_location_field"
            android:layout_width="216dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/button_padding"
            android:layout_margin="@dimen/button_margin"
            android:minWidth="150dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            />

        <Button
            android:id="@+id/button_select_search_location"
            android:layout_width="88dp"
            android:layout_height="wrap_content"
            android:text="@string/select_location"
            android:layout_marginStart="8dp"
            app:layout_constraintLeft_toRightOf="@+id/choose_location_field"
            app:layout_constraintBottom_toBottomOf="@+id/choose_location_field"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintHorizontal_bias="0.0"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/search_locations"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:id="@+id/textView"
            android:paddingStart="16dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintTop_toBottomOf="@+id/frameLayout3"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:text="@string/recent_locations"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:id="@+id/use_recent_location_title"
            android:paddingStart="16dp"
            app:layout_constraintTop_toBottomOf="@+id/choose_location_field"
            android:layout_marginTop="24dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"/>

        <Spinner
            android:layout_width="204dp"
            android:layout_height="48dp"
            app:layout_constraintTop_toBottomOf="@+id/use_recent_location_title"
            android:layout_marginTop="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginStart="16dp"
            android:id="@+id/spinner"/>

        <Button
            android:id="@+id/button_select_recent_location"
            android:layout_width="88dp"
            android:layout_height="wrap_content"
            android:text="@string/select_location"
            android:layout_marginStart="8dp"
            app:layout_constraintLeft_toRightOf="@+id/spinner"
            app:layout_constraintBottom_toBottomOf="@+id/spinner"
            app:layout_constraintTop_toTopOf="@+id/spinner"
            android:layout_marginEnd="16dp"
            app:layout_constraintRight_toRightOf="parent"/>

    </android.support.constraint.ConstraintLayout>

</layout>